syntax = "proto3";
package events;
option csharp_namespace = "Domain.Protos.Events";

import "elements/element.proto";

message ElementCreatedEvent {
	string page_id = 1;
	elements.Element element = 2;
}